--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "app_id": "476242",
     "secret_key": "0d7bebada39dcf0431e46a816c612123",
-    "url": "http://127.0.0.1:8765/auth"
+    "url": "https://api-deezer.herokuapp.com/auth"
 }
+
 
